config-root/namespaces/jx-staging/godemo62/deployment.yaml
# Source: godemo62/templates/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: godemo62-godemo62
  labels:
    draft: draft-app
    chart: "godemo62-0.0.2"
    gitops.jenkins-x.io/pipeline: 'namespaces'
  namespace: jx-staging
  annotations:
    wave.pusher.com/update-on-config-change: 'true'
spec:
  selector:
    matchLabels:
      app: godemo62-godemo62
  replicas: 1
  template:
    metadata:
      labels:
        draft: draft-app
        app: godemo62-godemo62
    spec:
      containers:
        - name: godemo62
          image: "ghcr.io/jstrachan/godemo62:0.0.2"
          imagePullPolicy: IfNotPresent
          envFrom: null
          ports:
            - containerPort: 8080
          livenessProbe:
            httpGet:
              path: /
              port: 8080
            initialDelaySeconds: 60
            periodSeconds: 10
            successThreshold: 1
            timeoutSeconds: 1
          readinessProbe:
            httpGet:
              path: /
              port: 8080
            periodSeconds: 10
            successThreshold: 1
            timeoutSeconds: 1
          resources:
            limits:
              cpu: 100m
              memory: 256Mi
            requests:
              cpu: 80m
              memory: 128Mi
      terminationGracePeriodSeconds:
