config-root/namespaces/jx-staging/godemo62/ingress.yaml
# Source: godemo62/templates/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: nginx
  name: godemo62
  namespace: jx-staging
  labels:
    gitops.jenkins-x.io/pipeline: 'namespaces'
spec:
  rules:
    - http:
        paths:
          - backend:
              serviceName: godemo62
              servicePort: 80
      host: godemo62-jx.34.78.85.241.nip.io
